raffia/tests/error/scss/at-rule/forward/hide-and-show.snap
---
source: raffia/tests/error.rs
---
error: expect token `;`, but found `<ident>`
  ┌─ hide-and-show.scss:1:21
  │
1 │ @forward "a" hide b show c;
  │                     ^^^^


